# api-lens

./: .gitignore  LICENSE  PYPI_README.md  README.md  apilens.toml  pyproject.toml
.github/workflows/: api-diff.yml  publish.yml
apilens/: __init__.py  cli.py  compare.py  config.py  format.py  models.py  snapshot.py
apilens/viewer/: __init__.py  app.py  ui.py
example/: apilens.toml  main.py
tests/: test_compare.py  test_snapshot.py  test_viewer.py
