[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openapi-lens"
version = "1.0.5"
description = "Version, diff, and visualize your OpenAPI spec"
readme = "PYPI_README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["openapi", "fastapi", "api", "diff", "changelog"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
]

[project.scripts]
apilens = "apilens.cli:cli"

[project.urls]
Homepage = "https://github.com/MariaC27/api-lens"
Issues = "https://github.com/MariaC27/api-lens/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["apilens*"]
